# diplomska

./: .terraform.lock.hcl  main.tf
actions/composite/deploy/: action.yaml
actions/docker/: Dockerfile  action.yaml  entrypoint.sh
actions/docker/deploy/: Dockerfile  action.yaml  entrypoint.sh
actions/docker/setup-context/: Dockerfile  action.yaml  entrypoint.sh
actions/js/deploy/: action.yaml  index.js  package-lock.json  package.json  pnpm-lock.yaml
app/src/: store.tsx
scripts/: clean_packages.py  clean_workflows.py  export.py  run_pr.sh
scripts/exports/: workflow_run_info_with_jobs_and_steps_1.json  workflow_run_info_with_jobs_and_steps_2.json  workflow_run_info_with_jobs_and_steps_3.json
server/: database.db  pyproject.toml
server/server/: main.py  model.py
